change some usages of components to variables

--- a/tex/figuressupp.tex
+++ b/tex/figuressupp.tex
@@ -3,7 +3,7 @@
 \begin{figure}[!ht]
 \centering
 \noindent\includegraphics[width=0.9\columnwidth]{fig/jacobianvectorfields.pdf}
-\caption{{\bf Vector fields resulting from the random sampling of two component systems.} System parameters of \ref{eq:arbitraryjacobianreactionnetwork} are rescaled to ensure the fixed point is located at $(1,1)$. The color of the dot located at the fixed point indicates whether it is stable (black) or unstable (gray).}
+\caption{{\bf Vector fields resulting from the random sampling of two variable systems.} System parameters of \ref{eq:arbitraryjacobianreactionnetwork} are rescaled to ensure the fixed point is located at $(1,1)$. The color of the dot located at the fixed point indicates whether it is stable (black) or unstable (gray).}
 \label{fig:jacobianvectorfields}
 \end{figure}
 
@@ -21,7 +21,7 @@
 \begin{figure}[!ht]
 \centering
 \noindent\includegraphics[width=0.6\columnwidth]{fig/apstab3x3.pdf}
-\caption{{\bf System stability as a function of connectivity.} The probability of stability is plotted versus connectivity for all three component systems. We note that, in contrast to robustness, the stability ranges over less than 10\% of the possible dynamic range and demonstrates no obvious significant correlation with connectivity. The red points represent the average of system stability at each connectivity.}
+\caption{{\bf System stability as a function of connectivity.} The probability of stability is plotted versus connectivity for all three variable systems. We note that, in contrast to robustness, the stability ranges over less than 10\% of the possible dynamic range and demonstrates no obvious significant correlation with connectivity. The red points represent the average of system stability at each connectivity.}
 \label{fig:apstab3x3}
 \end{figure}
 
