--- a/tex/methods.tex
+++ b/tex/methods.tex
@@ -4,7 +4,7 @@
 \section{Reaction Networks, Gene Regulatory Networks, and Ecological Networks with Prescribed Connectivity and Jacobians}\label{sec:reactionnetjacobian}
 
 % The quality of interest in this paper is robustness, which is related to the concept of structural stability (see \ref{sec:dynrobustandstructstab}), whose
-The evaluation of \ref{eq:robustnessonjacobians} requires the determination of whether or not a given dynamical system that is determined to be stable remains stable under a perturbation to one or more of its defining parameters, its rate functions, or environmental constraints that restrict it to a subset of its basins of attraction. We mean to refer to perturbations to the structure of the system itself as determined by the strengths of the couplings between the components and not only to perturbations of the state vector at a given point in time. It is justified to consider resampling elements of $A$ to generate $A'$ as a proxy for resampling elements of $\vec{p}$ to produce $\vec{p}\,'$ if any matrix $A$ can be obtained for some $F_i$, $\vec{p}$ and $\vec{x}^0$. This holds for the $F_i$ defining the Lotka-Volterra model. This is due to the fact that for a specification of non-zero real numbers for the components of $\vec{x}^0$ and any real numbers for the components of $a_{ij}$, there is a choice of parameters $\vec{p}$ given by $b_{ij} = \frac{a_{ij}}{x_i^0}$ and $r_i = - \sum_{j=1}^n \frac{x_j^0}{x_i^0} a_{ij}$ that generates those particular $a_{ij}$ as the Jacobian matrix of the dynamical system. Checking this property of the domain of realizability of the Jacobian can be done for ensembles of systems other than the Lotka-Volterra ensemble. For arbitrary biochemical reaction and gene regulatory networks, this property is likely to hold so long as not too many types of transformations are constrained from possibility. For example, a simplified version of the general form of the gene regulatory network model presented in \ref{fig:biomodelexamples} center panel is given by the system
+The evaluation of \ref{eq:robustnessonjacobians} requires the determination of whether or not a given dynamical system that is determined to be stable remains stable under a perturbation to one or more of its defining parameters, its rate functions, or environmental constraints that restrict it to a subset of its basins of attraction. We mean to refer to perturbations to the structure of the system itself as determined by the strengths of the couplings between the variables and not only to perturbations of the state vector at a given point in time. It is justified to consider resampling elements of $A$ to generate $A'$ as a proxy for resampling elements of $\vec{p}$ to produce $\vec{p}\,'$ if any matrix $A$ can be obtained for some $F_i$, $\vec{p}$ and $\vec{x}^0$. This holds for the $F_i$ defining the Lotka-Volterra model. This is due to the fact that for a specification of non-zero real numbers for the components of $\vec{x}^0$ and any real numbers for the components of $a_{ij}$, there is a choice of parameters $\vec{p}$ given by $b_{ij} = \frac{a_{ij}}{x_i^0}$ and $r_i = - \sum_{j=1}^n \frac{x_j^0}{x_i^0} a_{ij}$ that generates those particular $a_{ij}$ as the Jacobian matrix of the dynamical system. Checking this property of the domain of realizability of the Jacobian can be done for ensembles of systems other than the Lotka-Volterra ensemble. For arbitrary biochemical reaction and gene regulatory networks, this property is likely to hold so long as not too many types of transformations are constrained from possibility. For example, a simplified version of the general form of the gene regulatory network model presented in \ref{fig:biomodelexamples} center panel is given by the system
 \begin{equation}
 \frac{dg_i}{dt} = \sum_{j=1}^N k_{ij} g_j,
 \end{equation}
@@ -67,7 +67,7 @@ Then we may solve \ref{eq:jacobianconstraint1} for $k_{\emptyset \to A_i}$ and \
 
 A directed graph $G=(V,E)$ is a set $V$ of nodes and a set $E$ of ordered pairs of nodes \cite{Cormen2009}. For example, if $V = \{1,2,3\}$ and $E = \{(1,1),(2,2),(3,3),(1,2),(1,3),(2,3)\}$ then $G=(V,E)$ is the graph depicted in \reffigscc{} top where the labels $1$, $2$, and $3$ have been respectively assigned to the nodes vertically from top to bottom.
 
- We refer to the most hierarchical network architecture as the directed graph associated to a total ordering on the set of system components corresponding to the set of nodes, $V$, of the graph \cite{Cormen2009}. In general, a totally ordered set is a pair $(S,R)$ consisting of a set $S$ together with a total order relation $R$ on it. An example of a total ordering is the less than or equal to relation, $R \equiv \leq$, on the subset of natural numbers $S \equiv \{1,2,3\}$ given by $R \equiv \{1 \leq 1, 2 \leq 2, 3 \leq 3, 1 \leq 2, 1 \leq 3, 2 \leq 3\}$. The graph associated to this relation is equivalent to the graph shown in \reffigscc{} top and described algebraically in the preceding paragraph. More precisely, the conditions on $R$ for arbitrary elements $x,\,y,\,z \in S$ necessary for $(S,R)$ to be a totally ordered set are
+ We refer to the most hierarchical network architecture as the directed graph associated to a total ordering on the set of system variables corresponding to the set of nodes, $V$, of the graph \cite{Cormen2009}. In general, a totally ordered set is a pair $(S,R)$ consisting of a set $S$ together with a total order relation $R$ on it. An example of a total ordering is the less than or equal to relation, $R \equiv \leq$, on the subset of natural numbers $S \equiv \{1,2,3\}$ given by $R \equiv \{1 \leq 1, 2 \leq 2, 3 \leq 3, 1 \leq 2, 1 \leq 3, 2 \leq 3\}$. The graph associated to this relation is equivalent to the graph shown in \reffigscc{} top and described algebraically in the preceding paragraph. More precisely, the conditions on $R$ for arbitrary elements $x,\,y,\,z \in S$ necessary for $(S,R)$ to be a totally ordered set are
 \begin{enumerate}
 \item If $x R y$ and $y R x$ then $x=y$ (antisymmetry)
 \item If $x R y$ and $y R z$ then $x R z$ (transitivity)
