--- a/tex/overview.tex
+++ b/tex/overview.tex
@@ -1,7 +1,7 @@
 %!TEX root = ../paper.tex
 \section{Dynamical Systems on Biological Networks}
 
-In the general case of a dynamical system with $n$ components, where the components may be concentrations of chemical species, genes, or biological species, we have an $n$-dimensional vector of state variables or observables $(x_1(t), \ldots x_n(t)) = \vec{x}(t)
+In the general case of a dynamical system with $n$ variables, where the variables may be concentrations of chemical species, genes, or biological species, we have an $n$-dimensional vector of state variables or observables $(x_1(t), \ldots x_n(t)) = \vec{x}(t)
 $
 whose components are solutions to the arbitrary first order system
 \begin{equation}\label{eq:eom}
@@ -106,8 +106,8 @@ An example with two members of $\mathcal{F}$ from each of four different equival
 
 % \subsection{Overview}
 \subsection{Interaction graphs encoding network architecture}
-We are interested in the manner in which interactions among system variables are encoded by a directed graph associated to the system or some property of it. Strictly speaking, the interactions among variables in a dynamical model for any network can be represented in terms of a global interaction graph (\ref{fig:biomodelexamples} top row).
-For a general system $X \in \mathcal{D}$ the directed graph $G_X$ that describes the manner in which each of the variables depends upon one another is given by the adjacency matrix $\adj(G_X)$ where $\adj(G_X)_{ij}$ is $1$ if $F_i \hbox{ depends on } x_j$ and $0$ if $F_i \hbox{ does not depend on } x_j$. These two conditions on global system interactions are expressed locally for all $\vec{x}$ in terms of elements of the Jacobian matrix as $\frac{\partial F_i}{\partial x_j}(\vec{x}) \neq 0$ and $\frac{\partial F_i}{\partial x_j}(\vec{x}) = 0$.
+We are interested in the manner in which system variables interact with one another, and, ultimately, whether dynamical robustness depends upon the topology of these interactions. Interactions among system variables can be encoded in a directed graph associated to the system. Strictly speaking, the interactions among variables in a dynamical model for any network can be represented in terms of a global interaction graph (\ref{fig:biomodelexamples} top row).
+For a general system $X \in \mathcal{D}$ the directed graph $G_X$ that describes the manner in which each of the variables depends upon one another can be represented by the adjacency matrix $\adj(G_X)$ where $\adj(G_X)_{ij}$ is $1$ if $F_i \hbox{ depends on } x_j$ and $0$ if $F_i \hbox{ does not depend on } x_j$. These two conditions on global system interactions are expressed locally for all $\vec{x}$ in terms of elements of the Jacobian matrix as $\frac{\partial F_i}{\partial x_j}(\vec{x}) \neq 0$ and $\frac{\partial F_i}{\partial x_j}(\vec{x}) = 0$.
 %  \begin{displaymath}
 %    \adj(G_X)_{ij} = \left\{
 %      \begin{array}{ll}
@@ -116,7 +116,7 @@ For a general system $X \in \mathcal{D}$ the directed graph $G_X$ that describes
 %      \end{array}.
 %    \right.
 % \end{displaymath}
-For large systems, since any given component is only likely to interact with a relatively small proportion of the other components, these matrices may be sparse.
+For large systems, since any given variable is only likely to interact with a relatively small proportion of the other variables, these matrices may be sparse.
 We can also associate a local interaction graph $G_A$ given by an adjacency matrix $\adj(G_A)$ to each dynamical system having Jacobian matrix $A$ at some fixed point $\vec{x}^0$ where
  \begin{equation}\label{eq:lininterdepadj}
    \adj(G_A)_{ij} = \left\{
@@ -154,7 +154,7 @@ as visualized in \ref{fig:robustnessprocess}B. These changes can alter the stabi
 $$
 P(s^T) = \sum_{ \{ A^T \mid \mathcal{S}(A_i^T) = s_i^T \} } P(A^T)
 $$
-for each history of length $T$, $s^T = ( s_1, s_2, \ldots, s_T ) \in \{0,1\}^T$ where $s=1 \equiv S,\, s=0 \equiv U$ as visualized in \ref{fig:robustnessprocess}A and B. In order to model this we consider a process whereby perturbations applied to a given dynamical system and fixed point associated to a stable Jacobian matrix $A$ lead to another Jacobian matrix $A'$.  This corresponds to an ensemble of fixed points of dynamical systems where each model in the ensemble may otherwise be defined in terms of a different collection of rate functions $F'$, vector of parameters ${\vec{p}}\,'$, or environmental conditions restricting access to $\vec{x}^{0'}$ (\refsupp{}). We then ask what is the probability, given $A$ is a stable matrix, that $A'$ is also a stable matrix. This quantifies the intuitive statement that, over evolutionary timescales, it is not enough for a system to be stable, but rather that it have a reasonably high probability of remaining stable over contiguous timeframes. In terms of a history $s^T$ over the states specifying the stability property, $\mathcal{S}$, this is given by
+for each history of length $T$, $s^T = ( s_1, s_2, \ldots, s_T ) \in \{0,1\}^T$ where $s=1 \equiv S,\, s=0 \equiv U$ as visualized in \ref{fig:robustnessprocess}A and B. In order to model this, we consider a process whereby perturbations applied to a given dynamical system and fixed point associated to a stable Jacobian matrix $A$ lead to another Jacobian matrix $A'$.  This corresponds to an ensemble of fixed points of dynamical systems where each model in the ensemble may otherwise be defined in terms of a different collection of rate functions $F'$, vector of parameters ${\vec{p}}\,'$, or environmental conditions restricting access to $\vec{x}^{0'}$ (\refsupp{} \ref{sec:reactionnetjacobian}). We then ask what is the probability, given $A$ is a stable matrix, that $A'$ is also a stable matrix. This quantifies the intuitive statement that, over evolutionary timescales, it is not enough for a system to be stable, but rather that it have a reasonably high probability of remaining stable over contiguous timeframes. In terms of a history $s^T$ over the states specifying the stability property, $\mathcal{S}$, this is given by
 $$
 r = \frac{\sum_{t=0}^{T-1} s_{t+1}^T s_{t}^T}{\sum_{t=0}^{T-1} s_{t}^T}.
 $$
@@ -166,7 +166,7 @@ R(S,\mu,\tau) = E[r] \approx \frac{\sum_{s,s'} \mu(s) \tau(s' \mid s)}{\sum_{s=1
 \end{equation}
 This conditional probability corresponds to the parameter $R$ of the two-state process depicted in \ref{fig:robustnessprocess}A, and it is what we refer to as dynamical robustness.
 
-Conceptually, one might consider the quantity defined by \ref{eq:robustnessfromstoch} to be related to structural stability \cite{Smale1967}, but its definition differs in several important ways (see \ref{sec:dynrobustandstructstab}). Briefly, structural stability is a qualitative, global property that distinguishes dynamical systems whose associated vector field topologies are invariant to \emph{any} sufficiently small perturbation from those whose topologies undergo some change under any such perturbations. Dynamical robustness, on the other hand, is a quantitative, local property that specifies the probability of the stability of a fixed point undergoing a transformation from stable to unstable when the system is subjected to, potentially large, perturbations in one or a few interactions among system variables.
+Conceptually, one might consider the quantity defined by \ref{eq:robustnessfromstoch} to be related to structural stability \cite{Smale1967}, but its definition differs in several important ways (see \refsupp{} \ref{sec:dynrobustandstructstab}). Briefly, structural stability is a qualitative, global property that distinguishes dynamical systems whose associated vector field topologies are invariant to \emph{any} sufficiently small perturbation from those whose topologies change for \emph{some} perturbation of any size. Dynamical robustness, on the other hand, is a quantitative, local property that specifies the probability of the stability of a fixed point undergoing a transformation from stable to unstable when the system is subjected to, potentially large, perturbations in one or a few interactions among system variables.
 
 In terms of Jacobian matrices $A$ and $A'$, if the underlying process $P([A]^T)$ has analogous limits
 $$\mu(A) = \lim_{t,T \rightarrow \infty} P(A_t^T=A)$$
@@ -320,7 +320,7 @@ R(G_{\mathrm{max}}) =
 %This bound is attained by $G_{\mathrm{max}}$.
 % $\langle R(\hbox{stab} (G_{\mathrm{max}}), \mu') \rangle_1 = R_{\mathrm{max}}(C_1, \ldots C_n)$.
 \subsection{Simultaneous perturbation of multiple interaction strengths}
-This argument also works when relationships between multiple system components are perturbed simultaneously,
+This argument also works when relationships between multiple system variables are perturbed simultaneously,
 although the notation becomes more complicated.  Suppose that we
 resample $m$ interactions.  Then the analogue of \ref{eq:singleresamplemutau} is
 \begin{equation}\label{eq:multipleresamplemutau}
@@ -366,8 +366,8 @@ v_\alpha)^2 - \sum_{\alpha=1}^n v_\alpha^2)$, which is attained when $\hier(G_{m
 G_{tot}$.  Hence, we conclude that $R(G, S, \mu, \tau^{(m)}) \le
 R(G_{\mathrm{max}}, S, \mu, \tau^{(m)})$.
 
-This analytical result implies that the interaction graphs for systems that are the most robust will maximize the number of links between a given set of SCCs. Because this result is purely topological in nature, it does not depend at all upon any particular details such as the probability distribution from which the component interaction strengths are sampled or the size of the system. Any network whose associated dynamical system has the interaction graph among its SCCs equivalent to the total ordering is more robust than those associated to any of the other interaction graphs in \reffigscc{}. The graph associated to the total ordering is the most hierarchical network architecture for any given number of SCCs like that of \reffigscc{} top for three component systems where the \emph{highest} component in the hierarchy has directed links to all other nodes in the network, the second highest component has directed links to all other nodes in the network except the highest one, \emph{et cetera} (\refsupp{}). The result that dynamical robustness is correlated with network hierarchy therefore applies to an even broader class of dynamical systems than the particular random ensembles we have studied directly.
+This analytical result implies that the interaction graphs for systems that are the most robust will maximize the number of links between a given set of SCCs. Because this result is purely topological in nature, it does not depend at all upon any particular details such as the probability distribution from which the variable interaction strengths are sampled or the size of the system. Any network whose associated dynamical system has the interaction graph among its SCCs equivalent to the total ordering is more robust than those associated to any of the other interaction graphs in \reffigscc{}. The graph associated to the total ordering is the most hierarchical network architecture for any given number of SCCs like that of \reffigscc{} top for three variable systems where the \emph{highest} variable in the hierarchy has directed links to all other variables in the network, the second highest variable has directed links to all other variables in the network except the highest one, \emph{et cetera} (\refsupp{}). The result that dynamical robustness is correlated with network hierarchy therefore applies to an even broader class of dynamical systems than the particular random ensembles we have studied directly.
 
 \subsection{Examples of the analytical relationship between hierarchy and robustness}
 
-To test the prediction of the analytical results in \ref{eq:robschematic} and \ref{eq:robustnessmultiple}, we computed approximations to the probability distribution of stability and dynamical robustness relative to network architecture for ensembles of systems having two or three interacting components (see \refsupp{} \ref{tab:structstabmat} and \ref{tab:structstabmat3}). For all of these, we found that robustness is correlated with connectivity, but that the most robust systems have intermediate connectivity for a given network size (\reffigrobustconnect). Accounting for the number of cycles in a network architecture reveals a strong correlation between robustness and connectivity that was hidden when networks with any number of cycles were considered together (\reffigconnectcycle3D3x3). While the most hierarchical network architecture will always lack cycles altogether, cycle number alone is clearly insufficient to account for robustness as the members of each class span nearly the entire range of possible robustness values. Consistent with our analysis of the symmetries of robustness, we found that the most hierarchical network architecture is the most robust (\reffigrobusthierarchy). Moreover, if we consider hierarchy partitioned by connectivity, we find that there is a monotonic increase in robustness following any line of increasing hierarchy in \reffigconnectdist3D3x3.
+To test the prediction of the analytical results in \ref{eq:robschematic} and \ref{eq:robustnessmultiple}, we computed approximations to the probability distribution of stability and dynamical robustness relative to network architecture for ensembles of systems having two or three interacting variables (see \refsupp{} \ref{tab:structstabmat} and \ref{tab:structstabmat3}). For all of these, we found that robustness is correlated with connectivity, but that the most robust systems have intermediate connectivity for a given network size (\reffigrobustconnect). Accounting for the number of cycles in a network architecture reveals a strong correlation between robustness and connectivity that was hidden when networks with any number of cycles were considered together (\reffigconnectcycle3D3x3). While the most hierarchical network architecture will always lack cycles altogether, cycle number alone is clearly insufficient to account for robustness as the members of each class span nearly the entire range of possible robustness values. Consistent with our analysis of the symmetries of robustness, we found that the most hierarchical network architecture is the most robust (\reffigrobusthierarchy). Moreover, if we consider hierarchy partitioned by connectivity, we find that there is a monotonic increase in robustness following any line of increasing hierarchy in \reffigconnectdist3D3x3.
