--- a/tex/overview.tex
+++ b/tex/overview.tex
@@ -177,7 +177,7 @@ for $A,A' \in \mathbb{R}^{n \times n}$, \ref{eq:robustnessfromstoch} becomes
 R(S,\mu,\tau) = \frac{\int_{A,A' \in \mathbb{R}^{n \times n}} d\mu(A) d\tau(A' \mid A) \mathcal{S}(A) \mathcal{S}(A')}{\int_{A \in \mathbb{R}^{n \times n}} d\mu(A) \mathcal{S}(A)}.
 \end{equation}
 
-We would like to determine whether selection for dynamical robustness would result in a preference for the maintenance of one kind of network architecture relative to another. In order to then classify the properties of this process according to network architecture, we consider cases where the condition $\adj(G_A) = \adj(G_{A'})$ holds, which results in an analogous processes defined on each $G$-class $[G] \in \mathcal{F}/G$ given by
+We would like to determine whether selection for dynamical robustness would result in a preference for the maintenance of one kind of network architecture relative to another. In order to then classify the properties of this process according to network architecture, we consider cases where the condition $\adj(G_A) = \adj(G_{A'})$ holds, which results in analogous processes defined on each $G$-class $[G] \in \mathcal{F}/G$ given by
 $$
 P([A]^T \mid G_A {=} G) = \sum_{ \{ f^T \mid f_i^T \in [A]_i^T \} } P(f^T)
 $$
