add commented table with graphs

--- a/paper.tex
+++ b/paper.tex
@@ -116,6 +116,7 @@ $*$to whom correspondence should be addressed: aviv@einstein.yu.edu}
 \input{tex/table2x2stab}
 \pagebreak
 \input{tex/tablenographs}
+% \input{tex/tablewithgraphs}
 
 \end{document}
 
