state that all networks with certain architectures are unstable

--- a/tex/overview.tex
+++ b/tex/overview.tex
@@ -133,7 +133,7 @@ Each distinct labeled directed graph $G$ (of which there are $k=2^{n(n-1)}$) tha
 \begin{equation}\label{eq:jacgrapheqs}
 [G] = \left\{ [A] \; | \; G_A = G \right\}.
 \end{equation}
-The $G$-classes thereby partition the collection of fixed points, $\mathcal{F}$, over the space of dynamical systems, $\mathcal{D}$, according to the interactions among the variables of the dynamical system represented by the topology of $G$. This partition, $\mathcal{F} / G$, is a coarsening of $\mathcal{F} / {\sim}$.
+The $G$-classes thereby partition the collection of fixed points, $\mathcal{F}$, over the space of dynamical systems, $\mathcal{D}$, according to the interactions among the variables of the dynamical system represented by the topology of $G$. This partition, $\mathcal{F} / G$, is a coarsening of $\mathcal{F} / {\sim}$. In what follows we consider the stability of classes of fixed points associated to each possible graph $G$. In most cases some of these are stable and some of them are unstable, which we quantify as the probability of stability. However, note that for some $G$, all fixed points respecting the topology of $G$ are unstable.
 
 \section{Evolutionary processes sampling dynamical systems}
 In the course of biological evolution, the parameter values $\vec{p}$, form of the functions $F$, and environmental conditions restricting access to the basins associated to different fixed points $\vec{x}^0$ corresponding to all different types of networks considered in \ref{fig:biomodelexamples} are subject to, potentially drastic, modifications due to environmental fluctuations. The stochastic process by which these modifications occur induces one on the set of fixed points that results in the assignment of a probability $P(f^T)$ to each history of length $T$, $f^T = ( f_1,f_2,\ldots,f_T ) \in \mathcal{F}^T$ \cite{RobertM.Gray130}.
